Adds .card-action elements and docs
Also cleans up the documentation

--- a/docs/components/bars.html
+++ b/docs/components/bars.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Bars represent the progress of a task or the value within the known range.ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
-    <meta name="author" content="Yan Zhu">
+    <meta name="author" content="Byron Carasco">
     <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/components/bars.html">
     <meta property="og:title" content="Bars - Components - ridestyler.ui CSS Framework">
     <meta property="og:description" content="Bars represent the progress of a task or the value within the known range.ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
@@ -207,7 +207,7 @@
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 </code></pre>
             <h4 class="s-subtitle" id="bars-slider">Slider bars<a class="anchor" href="#bars-slider" aria-hidden="true">#</a></h4>
-            <div class="docs-demo columns">
+            <div class="docs-demo columns mt-4">
               <div class="column col-8 col-xs-12">
                 <div class="bar bar-slider">
                   <div class="bar-item" role="progressbar" style="width:50%;">
