--- a/docs/components/cards.html
+++ b/docs/components/cards.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Cards are flexible content containers. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
-    <meta name="author" content="Yan Zhu">
+    <meta name="author" content="Byron Carasco">
     <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/components/cards.html">
     <meta property="og:title" content="Cards - Components - ridestyler.ui CSS Framework">
     <meta property="og:description" content="Cards are flexible content containers. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
@@ -166,21 +166,21 @@
             <h3 class="s-title">Cards<a class="anchor" href="#cards" aria-hidden="true">#</a></h3>
             <p>Cards are flexible content containers.</p>
             <div class="docs-demo columns">
-              <div class="column col-6 col-xs-12">
+              <div class="column col-4 col-xs-12 mb-4">
                 <div class="card">
                   <div class="card-image"><img class="img-responsive" src="../img/osx-el-capitan.jpg" alt="OS X El Capitan"></div>
                   <div class="card-header">
-                    <div class="card-title h5">Microsoft</div>
+                    <div class="card-title h4">Microsoft</div>
                     <div class="card-subtitle text-gray">Software and hardware</div>
                   </div>
                   <div class="card-body">Empower every person and every organization on the planet to achieve more.</div>
-                  <div class="card-footer"><a class="btn btn-primary" href="#cards">Do</a></div>
+                  <div class="card-footer text-right"><a class="btn btn-link" href="#cards">Read <i class="icon icon-arrow-right"></i></a></div>
                 </div>
               </div>
-              <div class="column col-6 col-xs-12">
+              <div class="column col-4 col-xs-12 mb-4">
                 <div class="card">
                   <div class="card-header">
-                    <div class="card-title h5">Apple</div>
+                    <div class="card-title h4">Apple</div>
                     <div class="card-subtitle text-gray">Hardware and software</div>
                   </div>
                   <div class="card-image"><img class="img-responsive" src="../img/osx-yosemite.jpg" alt="OS X Yosemite"></div>
@@ -194,38 +194,38 @@
                   </div>
                 </div>
               </div>
-              <div class="column col-6 col-xs-12">
+              <div class="column col-4 col-xs-12 mb-4">
                 <div class="card">
                   <div class="card-image"><img class="img-responsive" src="../img/macos-sierra-2.jpg" alt="macOS Sierra"></div>
                   <div class="card-header">
                     <button class="btn btn-primary float-right"><i class="icon icon-plus"></i></button>
-                    <div class="card-title h5">Google I/O</div>
+                    <div class="card-title h4">Google I/O</div>
                     <div class="card-subtitle text-gray">Software and hardware</div>
                   </div>
                   <div class="card-body">An immersive, three-day experience focused on exploring the next generation of technology, mobile and beyond.</div>
                 </div>
               </div>
-              <div class="column col-6 col-xs-12">
+              <div class="column col-4 col-xs-12 mb-4">
                 <div class="card">
                   <div class="card-image"><img class="img-responsive" src="../img/osx-el-capitan-2.jpg" alt="OS X El Capitan"></div>
                   <div class="card-footer"><a class="btn btn-primary" href="#cards">Buy</a><a class="btn btn-link" href="#cards">Share</a></div>
                   <div class="card-body"><strong>Surface Studio</strong>. Turn your desk into a Studio. Surface Studio is designed for the creative process.</div>
                 </div>
               </div>
-              <div class="column col-6 col-xs-12">
+              <div class="column col-4 col-xs-12 mb-4">
                 <div class="card">
                   <div class="card-header">
-                    <div class="card-title h5">Apple</div>
+                    <div class="card-title h4">Apple</div>
                     <div class="card-subtitle text-gray">Hardware and software</div>
                   </div>
                   <div class="card-body">To make a contribution to the world by making tools for the mind that advance humankind.</div>
                   <div class="card-image"><img class="img-responsive" src="../img/macos-sierra.jpg" alt="macOS Sierra"></div>
                 </div>
               </div>
-              <div class="column col-6 col-xs-12">
+              <div class="column col-4 col-xs-12 mb-4">
                 <div class="card">
                   <div class="card-header">
-                    <div class="card-title h5">Google</div>
+                    <div class="card-title h4">Google</div>
                     <div class="card-subtitle text-gray">Software and hardware</div>
                   </div>
                   <div class="card-body">Organize the world’s information and make it universally accessible and useful.</div>
@@ -243,7 +243,7 @@
     <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"img/osx-el-capitan.jpg"</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"img-responsive"</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card-header"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card-title h5"</span>&gt;</span>...<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card-title h4"</span>&gt;</span>...<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
     <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card-subtitle text-gray"</span>&gt;</span>...<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card-body"</span>&gt;</span>
@@ -254,6 +254,55 @@
   <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 </code></pre>
+            <h4 class="s-subtitle" id="cards-action">Action Cards<a class="anchor" href="#cards-action" aria-hidden="true">#</a></h4>
+            <p>Give cards an <code>card-action</code> class to make them stand out as actionable. Action cards have a <code>.card-action-primary</code> and <code>.card-action-secondary</code> as well.</p>
+            <div class="docs-demo columns">
+              <div class="column col-4 col-xs-12 mb-4">
+                <div class="card card-action">
+                  <div class="card-header">
+                    <div class="card-title h4">Shopify</div>
+                    <div class="card-subtitle text-gray">Tires &amp; Wheels Integration</div>
+                  </div>
+                  <div class="card-body">Organize the world’s information and make it universally accessible and useful.</div>
+                  <div class="card-footer">
+                    <div class="btn btn-primary">Activate</div><span class="ml-2">Requires Pro</span>
+                  </div>
+                </div>
+              </div>
+              <div class="column col-4 col-xs-12 mb-4">
+                <div class="card card-action card-action-primary">
+                  <div class="card-header">
+                    <div class="card-title h4">WooCommerce</div>
+                    <div class="card-subtitle text-gray">Tires &amp; Wheels Integration</div>
+                  </div>
+                  <div class="card-body">Organize the world’s information and make it universally accessible and useful.</div>
+                  <div class="card-footer">
+                    <div class="btn btn-primary">Activate</div><span class="ml-2">Requires Pro</span>
+                  </div>
+                </div>
+              </div>
+              <div class="column col-4 col-xs-12 mb-4">
+                <div class="card card-action card-action-secondary">
+                  <div class="card-header">
+                    <div class="card-title h4">Custom API</div>
+                    <div class="card-subtitle text-gray">Tires &amp; Wheels Integration</div>
+                  </div>
+                  <div class="card-body">Organize the world’s information and make it universally accessible and useful.</div>
+                  <div class="card-footer">
+                    <div class="btn btn-primary">Activate</div><span class="ml-2">Requires Pro</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <pre class="code" data-lang="HTML"><code><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card card-action"</span>&gt;</span>
+  <span class="hljs-comment">&lt;!-- .card- elements --&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card card-action card-action-primary"</span>&gt;</span>
+  <span class="hljs-comment">&lt;!-- .card- elements --&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"card card-action card-action-secondary"</span>&gt;</span>
+  <span class="hljs-comment">&lt;!-- .card- elements --&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span></code></pre>
           </div>
           <div class="docs-footer container grid-lg" id="copyright">
             <p><a href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a> · <a href="https://ridestyler.com" target="_blank">RideStyler</a> · Version <span class="version"></span></p>
