--- a/docs/components/chips.html
+++ b/docs/components/chips.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Chips are complex entities in small blocks. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
-    <meta name="author" content="Yan Zhu">
+    <meta name="author" content="Byron Carasco">
     <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/components/chips.html">
     <meta property="og:title" content="Chips - Components - ridestyler.ui CSS Framework">
     <meta property="og:description" content="Chips are complex entities in small blocks. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
@@ -187,7 +187,7 @@
 
 <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"chip"</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"img/avatar-1.png"</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"avatar avatar-sm"</span>&gt;</span>
-  Yan Zhu
+  Byron Carasco
   <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"#"</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn btn-clear"</span> <span class="hljs-attr">aria-label</span>=<span class="hljs-string">"Close"</span> <span class="hljs-attr">role</span>=<span class="hljs-string">"button"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">a</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 </code></pre>
