--- a/docs/src/components/bars.pug
+++ b/docs/src/components/bars.pug
@@ -52,7 +52,7 @@ block docs-content
 
     +docs-subheading('bars-slider', 'Slider bars')
 
-    .docs-demo.columns
+    .docs-demo.columns.mt-4
       .column.col-8.col-xs-12
         .bar.bar-slider
           .bar-item(role="progressbar" style="width:50%;")
