--- a/docs/src/components/chips.pug
+++ b/docs/src/components/chips.pug
@@ -50,7 +50,7 @@ block docs-content
 
           <div class="chip">
             <img src="img/avatar-1.png" class="avatar avatar-sm">
-            Yan Zhu
+            Byron Carasco
             <a href="#" class="btn btn-clear" aria-label="Close" role="button"></a>
           </div>
 
