--- a/docs/src/utilities/shadow.pug
+++ b/docs/src/utilities/shadow.pug
@@ -17,6 +17,8 @@ block docs-content
         .column.col-6.col-xs-12
             .card.p-2.bg-secondary.shadow-far Far Shadow
         .column.col-6.col-xs-12
+            .card.p-2.bg-secondary.shadow-extra-far Extra Far Shadow
+        .column.col-6.col-xs-12
             .card.p-2.bg-secondary.shadow-disabled Disabled Shadow
 
     pre.code(data-lang='HTML')
@@ -28,6 +30,9 @@ block docs-content
                 </div>
                 <div class="column col-6 col-xs-12">
                     <div class="card p-2 bg-secondary shadow-far">Far Shadow</div>
+                </div>
+                <div class="column col-6 col-xs-12">
+                    <div class="card p-2 bg-secondary shadow-extra-far">Extra Far Shadow</div>
                 </div>
                 <div class="column col-6 col-xs-12">
                     <div class="card p-2 bg-secondary shadow-disabled">Disabled Shadow</div>
