--- a/docs/components/pagination.html
+++ b/docs/components/pagination.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.">
-    <meta name="author" content="Yan Zhu">
+    <meta name="author" content="Byron Carasco">
     <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/components/pagination.html">
     <meta property="og:title" content="Pagination - Components - ridestyler.ui CSS Framework">
     <meta property="og:description" content="ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.">
