--- a/docs/components/tooltips.html
+++ b/docs/components/tooltips.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Tooltips provide context information labels that appear on hover and focus. Tooltips component is built entirely in CSS. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
-    <meta name="author" content="Yan Zhu">
+    <meta name="author" content="Byron Carasco">
     <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/components/tooltips.html">
     <meta property="og:title" content="Tooltips - Components - ridestyler.ui CSS Framework">
     <meta property="og:description" content="Tooltips provide context information labels that appear on hover and focus. Tooltips component is built entirely in CSS. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
