--- a/docs/layout/grid.html
+++ b/docs/layout/grid.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Layout includes flexbox based responsive grid system with 12 columns. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
-    <meta name="author" content="Yan Zhu">
+    <meta name="author" content="Byron Carasco">
     <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/layout/grid.html">
     <meta property="og:title" content="Flexbox grid - Layout - ridestyler.ui CSS Framework">
     <meta property="og:description" content="Layout includes flexbox based responsive grid system with 12 columns. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
