--- a/docs/src/_layout/_layout.pug
+++ b/docs/src/_layout/_layout.pug
@@ -25,7 +25,7 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
     meta(http-equiv='x-ua-compatible' content='ie=edge')
     meta(name='description' content= description)
-    meta(name='author' content='Yan Zhu')
+    meta(name='author' content='Byron Carasco')
     meta(property='og:url' content= url)
     meta(property='og:title' content= title)
     meta(property='og:description' content= description)
