--- a/docs/src/components/cards.pug
+++ b/docs/src/components/cards.pug
@@ -12,21 +12,23 @@ block docs-content
     p Cards are flexible content containers.
 
     .docs-demo.columns
-      .column.col-6.col-xs-12
+      .column.col-4.col-xs-12.mb-4
         .card
           .card-image
             img.img-responsive(src="../img/osx-el-capitan.jpg" alt="OS X El Capitan")
           .card-header
-            .card-title.h5 Microsoft
+            .card-title.h4 Microsoft
             .card-subtitle.text-gray Software and hardware
           .card-body
             | Empower every person and every organization on the planet to achieve more.
-          .card-footer
-            a.btn.btn-primary(href="#cards") Do
-      .column.col-6.col-xs-12
+          .card-footer.text-right
+            a.btn.btn-link(href="#cards")
+              | Read 
+              i.icon.icon-arrow-right
+      .column.col-4.col-xs-12.mb-4
         .card
           .card-header
-            .card-title.h5 Apple
+            .card-title.h4 Apple
             .card-subtitle.text-gray Hardware and software
           .card-image
             img.img-responsive(src="../img/osx-yosemite.jpg" alt="OS X Yosemite")
@@ -37,18 +39,18 @@ block docs-content
               button.btn.btn-primary Buy
               button.btn Buy
               button.btn Buy
-      .column.col-6.col-xs-12
+      .column.col-4.col-xs-12.mb-4
         .card
           .card-image
             img.img-responsive(src="../img/macos-sierra-2.jpg" alt="macOS Sierra")
           .card-header
             button.btn.btn-primary.float-right
               i.icon.icon-plus
-            .card-title.h5 Google I/O
+            .card-title.h4 Google I/O
             .card-subtitle.text-gray Software and hardware
           .card-body
             | An immersive, three-day experience focused on exploring the next generation of technology, mobile and beyond.
-      .column.col-6.col-xs-12
+      .column.col-4.col-xs-12.mb-4
         .card
           .card-image
             img.img-responsive(src="../img/osx-el-capitan-2.jpg" alt="OS X El Capitan")
@@ -58,19 +60,19 @@ block docs-content
           .card-body
             strong Surface Studio
             | . Turn your desk into a Studio. Surface Studio is designed for the creative process.
-      .column.col-6.col-xs-12
+      .column.col-4.col-xs-12.mb-4
         .card
           .card-header
-            .card-title.h5 Apple
+            .card-title.h4 Apple
             .card-subtitle.text-gray Hardware and software
           .card-body
             | To make a contribution to the world by making tools for the mind that advance humankind.
           .card-image
             img.img-responsive(src="../img/macos-sierra.jpg" alt="macOS Sierra")
-      .column.col-6.col-xs-12
+      .column.col-4.col-xs-12.mb-4
         .card
           .card-header
-            .card-title.h5 Google
+            .card-title.h4 Google
             .card-subtitle.text-gray Software and hardware
           .card-body
             | Organize the world’s information and make it universally accessible and useful.
@@ -93,7 +95,7 @@ block docs-content
               <img src="img/osx-el-capitan.jpg" class="img-responsive">
             </div>
             <div class="card-header">
-              <div class="card-title h5">...</div>
+              <div class="card-title h4">...</div>
               <div class="card-subtitle text-gray">...</div>
             </div>
             <div class="card-body">
@@ -103,5 +105,53 @@ block docs-content
               <button class="btn btn-primary">...</button>
             </div>
           </div>
+    
+    +docs-subheading('cards-action', 'Action Cards')
+    p Give cards an #[code card-action] class to make them stand out as actionable. Action cards have a #[code .card-action-primary] and #[code .card-action-secondary] as well.
 
+    .docs-demo.columns
+      .column.col-4.col-xs-12.mb-4
+        .card.card-action
+          .card-header
+            .card-title.h4 Shopify
+            .card-subtitle.text-gray Tires &amp; Wheels Integration
+          .card-body
+            | Organize the world’s information and make it universally accessible and useful.
+          .card-footer
+            .btn.btn-primary Activate
+            span.ml-2 Requires Pro
+      .column.col-4.col-xs-12.mb-4
+        .card.card-action.card-action-primary
+          .card-header
+            .card-title.h4 WooCommerce
+            .card-subtitle.text-gray Tires &amp; Wheels Integration
+          .card-body
+            | Organize the world’s information and make it universally accessible and useful.
+          .card-footer
+            .btn.btn-primary Activate
+            span.ml-2 Requires Pro
+      .column.col-4.col-xs-12.mb-4
+        .card.card-action.card-action-secondary
+          .card-header
+            .card-title.h4 Custom API
+            .card-subtitle.text-gray Tires &amp; Wheels Integration
+          .card-body
+            | Organize the world’s information and make it universally accessible and useful.
+          .card-footer
+            .btn.btn-primary Activate
+            span.ml-2 Requires Pro
+
+    
+    pre.code(data-lang='HTML')
+      code
+        :highlight(lang="html")
+          <div class="card card-action">
+            <!-- .card- elements -->
+          </div>
+          <div class="card card-action card-action-primary">
+            <!-- .card- elements -->
+          </div>
+          <div class="card card-action card-action-secondary">
+            <!-- .card- elements -->
+          </div>
   include ../_layout/_footer.pug
