Adds flex utilities

--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -83,6 +83,7 @@ block content
             {url: 'divider', name: 'Divider'},
             {url: 'loading', name: 'Loading'},
             {url: 'position', name: 'Position'},
+            {url: 'flex', name: 'Flex'},
             {url: 'shapes', name: 'Shapes'},
             {url: 'text', name: 'Text'},
             {url: 'shadow', name: 'Shadow'}
