Adds dropdown menu to navbar example

--- a/docs/layout/navbar.html
+++ b/docs/layout/navbar.html
@@ -171,8 +171,30 @@
               <div class="column">
                 <div class="navbar">
                   <div class="navbar-brand">RideStyler</div>
-                  <section class="navbar-section">
-                    <button class="btn btn-link">Wheel Co. <i class="icon icon-caret-down"></i></button>
+                  <section class="navbar-section"><span class="dropdown dropdown-right">
+                      <button class="btn btn-link dropdown-toggle">Wheel Co. <i class="icon icon-caret-down"></i></button>
+                      <ul class="menu">
+                        <li class="menu-item">
+                          <div class="tile tile-centered">
+                            <div class="tile-icon"><img class="avatar" src="../img/avatar-4.png" alt="Avatar"/></div>
+                            <div class="tile-content">Steve Rogers</div>
+                          </div>
+                        </li>
+                        <li class="divider"></li>
+                        <li class="menu-item"><a class="active" href="#menus">My profile</a>
+                          <div class="menu-badge">
+                            <label class="form-checkbox">
+                              <input type="checkbox"/><i class="form-icon"></i>Public
+                            </label>
+                          </div>
+                        </li>
+                        <li class="menu-item"><a href="#menus">Settings</a>
+                          <div class="menu-badge">
+                            <label class="label label-primary">2</label>
+                          </div>
+                        </li>
+                        <li class="menu-item"><a href="#menus">Logout</a></li>
+                      </ul></span>
                   </section>
                 </div>
               </div>
@@ -186,10 +208,12 @@
     <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"..."</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"navbar-brand"</span>&gt;</span>RideStyler<span class="hljs-tag">&lt;/<span class="hljs-name">a</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">section</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">section</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"navbar-section"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"input-group input-inline"</span>&gt;</span>
-      <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"form-input"</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"text"</span> <span class="hljs-attr">placeholder</span>=<span class="hljs-string">"search"</span>&gt;</span>
-      <span class="hljs-tag">&lt;<span class="hljs-name">button</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn btn-primary input-group-btn"</span>&gt;</span>Search<span class="hljs-tag">&lt;/<span class="hljs-name">button</span>&gt;</span>
-    <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">span</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"dropdown dropdown-right"</span>&gt;</span>
+      <span class="hljs-tag">&lt;<span class="hljs-name">button</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn btn-link dropdown-toggle"</span>&gt;</span>Wheel Co. <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-caret-down"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">button</span>&gt;</span>
+      <span class="hljs-tag">&lt;<span class="hljs-name">ul</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"menu"</span>&gt;</span>
+        ...
+      <span class="hljs-tag">&lt;/<span class="hljs-name">ul</span>&gt;</span>
+    <span class="hljs-tag">&lt;/<span class="hljs-name">span</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">section</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">header</span>&gt;</span>
 </code></pre>
@@ -208,8 +232,30 @@
                   <section class="navbar-section">
                     <h1>Calculators</h1>
                   </section>
-                  <section class="navbar-section">
-                    <button class="btn btn-link">Wheel Co. <i class="icon icon-caret-down"></i></button>
+                  <section class="navbar-section"><span class="dropdown dropdown-right">
+                      <button class="btn btn-link dropdown-toggle">Wheel Co. <i class="icon icon-caret-down"></i></button>
+                      <ul class="menu">
+                        <li class="menu-item">
+                          <div class="tile tile-centered">
+                            <div class="tile-icon"><img class="avatar" src="../img/avatar-4.png" alt="Avatar"/></div>
+                            <div class="tile-content">Steve Rogers</div>
+                          </div>
+                        </li>
+                        <li class="divider"></li>
+                        <li class="menu-item"><a class="active" href="#menus">My profile</a>
+                          <div class="menu-badge">
+                            <label class="form-checkbox">
+                              <input type="checkbox"/><i class="form-icon"></i>Public
+                            </label>
+                          </div>
+                        </li>
+                        <li class="menu-item"><a href="#menus">Settings</a>
+                          <div class="menu-badge">
+                            <label class="label label-primary">2</label>
+                          </div>
+                        </li>
+                        <li class="menu-item"><a href="#menus">Logout</a></li>
+                      </ul></span>
                   </section>
                 </div>
               </div>
@@ -223,7 +269,12 @@
     <span class="hljs-tag">&lt;<span class="hljs-name">h1</span>&gt;</span>Calculators<span class="hljs-tag">&lt;/<span class="hljs-name">h1</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">section</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">section</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"navbar-section"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">button</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn btn-link"</span>&gt;</span>Wheel Co. <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-caret-down"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">button</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">span</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"dropdown dropdown-right"</span>&gt;</span>
+      <span class="hljs-tag">&lt;<span class="hljs-name">button</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn btn-link dropdown-toggle"</span>&gt;</span>Wheel Co. <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-caret-down"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">button</span>&gt;</span>
+      <span class="hljs-tag">&lt;<span class="hljs-name">ul</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"menu"</span>&gt;</span>
+        ...
+      <span class="hljs-tag">&lt;/<span class="hljs-name">ul</span>&gt;</span>
+    <span class="hljs-tag">&lt;/<span class="hljs-name">span</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">section</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 </code></pre>
