--- a/docs/src/components/menu.pug
+++ b/docs/src/components/menu.pug
@@ -159,7 +159,7 @@ block docs-content
       | And add a focusable element with the #[code dropdown-toggle] class for the button and a #[code menu] component right next to it.
       | You also need to add #[code tabindex] to make the buttons focusable.
     p
-      | If the dropdown is close to the right edge of the browser, you can add the #[code dropdown-right] class to the container to prevent it appearing off screen.
+      | If the dropdown is close to the right edge of the browser, you can add the #[code dropdown-right] class to the #[code dropdown] to prevent it appearing off screen.
 
     .docs-demo.columns
       .column.col-xs-12.text-right
