--- a/docs/components/menu.html
+++ b/docs/components/menu.html
@@ -295,7 +295,7 @@
               And add a focusable element with the <code>dropdown-toggle</code> class for the button and a <code>menu</code> component right next to it.
               You also need to add <code>tabindex</code> to make the buttons focusable.
             </p>
-            <p>If the dropdown is close to the right edge of the browser, you can add the <code>dropdown-right</code> class to the container to prevent it appearing off screen.</p>
+            <p>If the dropdown is close to the right edge of the browser, you can add the <code>dropdown-right</code> class to the <code>dropdown</code> to prevent it appearing off screen.</p>
             <div class="docs-demo columns">
               <div class="column col-xs-12 text-right">
                 <div class="dropdown dropdown-right"><a class="btn btn-primary dropdown-toggle" tabindex="0">dropdown button <i class="icon icon-caret-down"></i></a>
